k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_204bcd8ee6ac
          ports:
            - containerPort: 80
